--- a/locale/ar.po
+++ b/locale/ar.po
@@ -3,66 +3,67 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# MUHAAB SHAAM <muhaab.org@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Deepin Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
-"PO-Revision-Date: 2016-04-19 01:59+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Chinese (China) (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/zh_CN/)\n"
+"PO-Revision-Date: 2016-05-21 23:32+0000\n"
+"Last-Translator: MUHAAB SHAAM <muhaab.org@gmail.com>\n"
+"Language-Team: Arabic (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: ar\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
 #: ../dra_client/service/client_dbus.py:129 ../dra_server/server_dbus.py:192
 msgid "Remoting service terminated!"
-msgstr "远程服务已结束。"
+msgstr "خدمة الاتصال عن بعد منتهية !"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:32
 #: ../dra_client/views/NormalTitleBar.qml:22
 msgid "Remote Assistance"
-msgstr "远程协助"
+msgstr "المساعدة عن بعد"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:40
 #: ../dra_client/views/NormalTitleBar.qml:30
 msgid "Preferences"
-msgstr "选项"
+msgstr "التفضيلات"
 
 #: ../dra_client/views/preferencesmenu.py:52
 msgid "Balance"
-msgstr "平衡 "
+msgstr "توازن"
 
 #: ../dra_client/views/preferencesmenu.py:58
 msgid "Optimize Speed"
-msgstr "性能优先"
+msgstr "تحسين السرعة"
 
 #: ../dra_client/views/preferencesmenu.py:63
 msgid "Optimize Quality"
-msgstr "画质优先"
+msgstr "تحسين الجودة"
 
 #: ../dra_client/views/preferencesmenu.py:68
 msgid "Fullscreen"
-msgstr "全屏"
+msgstr "ملء الشاشة"
 
 #: ../dra_server/server_dbus.py:176
 msgid "Failed to get access code!"
-msgstr "获取访问码失败！"
+msgstr "تعذر الحصول على رمز الوصول !"
 
 #: ../dra_server/views/ConfirmWindow.qml:81
 msgid "Are you sure to close remote desktop connection?"
-msgstr "您确定要断开远程桌面连接吗？"
+msgstr "هل أنت متأكد من إغلاق اتصال سطح المكتب البعيد؟"
 
 #: ../dra_server/views/ConfirmWindow.qml:94
 msgid "Cancel"
-msgstr "取消"
+msgstr "إلغاء"
 
 #: ../dra_server/views/ConfirmWindow.qml:107
 msgid "Confirm"
-msgstr "确定"
+msgstr "تأكيد"
 
 #: ../dra_server/views/DisconnectWindow.qml:141
 msgid "Disconnect"
-msgstr "断开"
+msgstr "قطع الاتصال"
