--- a/locale/el.po
+++ b/locale/el.po
@@ -10,59 +10,59 @@ msgstr ""
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
 "PO-Revision-Date: 2016-04-19 01:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Chinese (China) (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/zh_CN/)\n"
+"Language-Team: Greek (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: el\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../dra_client/service/client_dbus.py:129 ../dra_server/server_dbus.py:192
 msgid "Remoting service terminated!"
-msgstr "远程服务已结束。"
+msgstr "Απομακρυσμένη υπηρεσία τερματίστηκε!"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:32
 #: ../dra_client/views/NormalTitleBar.qml:22
 msgid "Remote Assistance"
-msgstr "远程协助"
+msgstr "Απομακρυσμένη Βοήθεια"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:40
 #: ../dra_client/views/NormalTitleBar.qml:30
 msgid "Preferences"
-msgstr "选项"
+msgstr "Προτιμήσεις"
 
 #: ../dra_client/views/preferencesmenu.py:52
 msgid "Balance"
-msgstr "平衡 "
+msgstr "Εξισορρόπηση"
 
 #: ../dra_client/views/preferencesmenu.py:58
 msgid "Optimize Speed"
-msgstr "性能优先"
+msgstr "Βελτιστοποίηση Ταχύτητας"
 
 #: ../dra_client/views/preferencesmenu.py:63
 msgid "Optimize Quality"
-msgstr "画质优先"
+msgstr "Βελτιστοποίηση Ποιότητας"
 
 #: ../dra_client/views/preferencesmenu.py:68
 msgid "Fullscreen"
-msgstr "全屏"
+msgstr "Πλήρης οθόνη"
 
 #: ../dra_server/server_dbus.py:176
 msgid "Failed to get access code!"
-msgstr "获取访问码失败！"
+msgstr "Αποτυχία εύρεσης κωδικού!"
 
 #: ../dra_server/views/ConfirmWindow.qml:81
 msgid "Are you sure to close remote desktop connection?"
-msgstr "您确定要断开远程桌面连接吗？"
+msgstr "Είστε σίγουρος ότι θέλετε να κλείσετε την απομακρυσμένη σύνδεση;"
 
 #: ../dra_server/views/ConfirmWindow.qml:94
 msgid "Cancel"
-msgstr "取消"
+msgstr "Ακύρωση"
 
 #: ../dra_server/views/ConfirmWindow.qml:107
 msgid "Confirm"
-msgstr "确定"
+msgstr "Επιβεβαίωση"
 
 #: ../dra_server/views/DisconnectWindow.qml:141
 msgid "Disconnect"
-msgstr "断开"
+msgstr "Αποσύνδεση"
