--- a/locale/fr.po
+++ b/locale/fr.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# lexross <its4moi@gmail.com>, 2015
+# lexross <its4moi@gmail.com>, 2016
 msgid ""
 msgstr ""
-"Project-Id-Version: dde-control-center\n"
+"Project-Id-Version: Deepin Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
-"PO-Revision-Date: 2015-08-31 12:10+0000\n"
+"PO-Revision-Date: 2016-04-29 01:18+0000\n"
 "Last-Translator: lexross <its4moi@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/linuxdeepin/dde-control-center/language/fr/)\n"
+"Language-Team: French (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -34,7 +34,7 @@ msgstr "Préférences"
 
 #: ../dra_client/views/preferencesmenu.py:52
 msgid "Balance"
-msgstr "Balance"
+msgstr "Équilibré"
 
 #: ../dra_client/views/preferencesmenu.py:58
 msgid "Optimize Speed"
