--- a/locale/pt.po
+++ b/locale/pt.po
@@ -3,15 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Ricardo Simões <xmcorporation@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: dde-control-center\n"
+"Project-Id-Version: Deepin Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
-"PO-Revision-Date: 2015-08-21 02:06+0000\n"
-"Last-Translator: deepin_transifex <xiabin@linuxdeepin.com>\n"
-"Language-Team: Portuguese (http://www.transifex.com/linuxdeepin/dde-control-center/language/pt/)\n"
+"PO-Revision-Date: 2016-04-19 09:17+0000\n"
+"Last-Translator: Ricardo Simões <xmcorporation@gmail.com>\n"
+"Language-Team: Portuguese (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,11 +37,11 @@ msgstr "Equilibrado"
 
 #: ../dra_client/views/preferencesmenu.py:58
 msgid "Optimize Speed"
-msgstr "Velocidade Optimizada"
+msgstr "Otimizar Velocidade"
 
 #: ../dra_client/views/preferencesmenu.py:63
 msgid "Optimize Quality"
-msgstr "Optimizar Qualidade"
+msgstr "Otimizar Qualidade"
 
 #: ../dra_client/views/preferencesmenu.py:68
 msgid "Fullscreen"
