--- a/locale/ru.po
+++ b/locale/ru.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Анатолий Валерианович <ffox909@mail.ru>, 2015
+# Анатолий Валерианович <ffox909@mail.ru>, 2016
 msgid ""
 msgstr ""
-"Project-Id-Version: dde-control-center\n"
+"Project-Id-Version: Deepin Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
-"PO-Revision-Date: 2015-08-24 16:32+0000\n"
+"PO-Revision-Date: 2016-04-25 04:10+0000\n"
 "Last-Translator: Анатолий Валерианович <ffox909@mail.ru>\n"
-"Language-Team: Russian (http://www.transifex.com/linuxdeepin/dde-control-center/language/ru/)\n"
+"Language-Team: Russian (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +25,7 @@ msgstr "Удалённая служба прекращена!"
 #: ../dra_client/views/FullscreenTitleBar.qml:32
 #: ../dra_client/views/NormalTitleBar.qml:22
 msgid "Remote Assistance"
-msgstr "Удалённый доступ"
+msgstr "Удалённая помощь"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:40
 #: ../dra_client/views/NormalTitleBar.qml:30
@@ -50,11 +50,11 @@ msgstr "Полный экран"
 
 #: ../dra_server/server_dbus.py:176
 msgid "Failed to get access code!"
-msgstr "Неудача получения кода доступа!"
+msgstr "Неудалось получить код доступа!"
 
 #: ../dra_server/views/ConfirmWindow.qml:81
 msgid "Are you sure to close remote desktop connection?"
-msgstr "Вы уверенны в отключении удалённого рабочего стола?"
+msgstr "Вы уверены что хотите отключить удалённый доступ рабочего стола?"
 
 #: ../dra_server/views/ConfirmWindow.qml:94
 msgid "Cancel"
@@ -66,4 +66,4 @@ msgstr "Подтвердить"
 
 #: ../dra_server/views/DisconnectWindow.qml:141
 msgid "Disconnect"
-msgstr "Отключение"
+msgstr "Отключить"
