--- a/locale/sk.po
+++ b/locale/sk.po
@@ -3,15 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Marek Bujko <marek.bujko@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: dde-control-center\n"
+"Project-Id-Version: Deepin Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
-"PO-Revision-Date: 2015-09-06 16:57+0000\n"
-"Last-Translator: Marek Bujko <marek.bujko@gmail.com>\n"
-"Language-Team: Slovak (http://www.transifex.com/linuxdeepin/dde-control-center/language/sk/)\n"
+"PO-Revision-Date: 2016-04-19 01:59+0000\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: Slovak (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
