--- a/locale/uk.po
+++ b/locale/uk.po
@@ -10,59 +10,59 @@ msgstr ""
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
 "PO-Revision-Date: 2016-04-19 01:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Chinese (China) (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/zh_CN/)\n"
+"Language-Team: Ukrainian (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: uk\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../dra_client/service/client_dbus.py:129 ../dra_server/server_dbus.py:192
 msgid "Remoting service terminated!"
-msgstr "远程服务已结束。"
+msgstr "Дистанційне обслуговування завершено!"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:32
 #: ../dra_client/views/NormalTitleBar.qml:22
 msgid "Remote Assistance"
-msgstr "远程协助"
+msgstr "Віддалена допомога"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:40
 #: ../dra_client/views/NormalTitleBar.qml:30
 msgid "Preferences"
-msgstr "选项"
+msgstr "Налаштування"
 
 #: ../dra_client/views/preferencesmenu.py:52
 msgid "Balance"
-msgstr "平衡 "
+msgstr "Баланс"
 
 #: ../dra_client/views/preferencesmenu.py:58
 msgid "Optimize Speed"
-msgstr "性能优先"
+msgstr "Оптимізувати швидкість"
 
 #: ../dra_client/views/preferencesmenu.py:63
 msgid "Optimize Quality"
-msgstr "画质优先"
+msgstr "Оптимізувати якість"
 
 #: ../dra_client/views/preferencesmenu.py:68
 msgid "Fullscreen"
-msgstr "全屏"
+msgstr "Повний екран"
 
 #: ../dra_server/server_dbus.py:176
 msgid "Failed to get access code!"
-msgstr "获取访问码失败！"
+msgstr "Не вдалось отримати код доступу!"
 
 #: ../dra_server/views/ConfirmWindow.qml:81
 msgid "Are you sure to close remote desktop connection?"
-msgstr "您确定要断开远程桌面连接吗？"
+msgstr "Ви впевнені, що хочете вимкнути віддалений доступ до робочого столу?"
 
 #: ../dra_server/views/ConfirmWindow.qml:94
 msgid "Cancel"
-msgstr "取消"
+msgstr "Скасувати"
 
 #: ../dra_server/views/ConfirmWindow.qml:107
 msgid "Confirm"
-msgstr "确定"
+msgstr "Підтвердити"
 
 #: ../dra_server/views/DisconnectWindow.qml:141
 msgid "Disconnect"
-msgstr "断开"
+msgstr "Вимкнути"
