--- a/locale/zh_TW.po
+++ b/locale/zh_TW.po
@@ -10,50 +10,50 @@ msgstr ""
 "POT-Creation-Date: 2015-08-20 15:01+0800\n"
 "PO-Revision-Date: 2016-04-19 01:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Chinese (China) (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/zh_CN/)\n"
+"Language-Team: Chinese (Taiwan) (http://www.transifex.com/linuxdeepin/deepin-desktop-environment/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
+"Language: zh_TW\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../dra_client/service/client_dbus.py:129 ../dra_server/server_dbus.py:192
 msgid "Remoting service terminated!"
-msgstr "远程服务已结束。"
+msgstr "遠端服務已關閉 !"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:32
 #: ../dra_client/views/NormalTitleBar.qml:22
 msgid "Remote Assistance"
-msgstr "远程协助"
+msgstr "遠端協助"
 
 #: ../dra_client/views/FullscreenTitleBar.qml:40
 #: ../dra_client/views/NormalTitleBar.qml:30
 msgid "Preferences"
-msgstr "选项"
+msgstr "偏好設定"
 
 #: ../dra_client/views/preferencesmenu.py:52
 msgid "Balance"
-msgstr "平衡 "
+msgstr "平衡"
 
 #: ../dra_client/views/preferencesmenu.py:58
 msgid "Optimize Speed"
-msgstr "性能优先"
+msgstr "速度先決"
 
 #: ../dra_client/views/preferencesmenu.py:63
 msgid "Optimize Quality"
-msgstr "画质优先"
+msgstr "畫質先決"
 
 #: ../dra_client/views/preferencesmenu.py:68
 msgid "Fullscreen"
-msgstr "全屏"
+msgstr "全螢幕"
 
 #: ../dra_server/server_dbus.py:176
 msgid "Failed to get access code!"
-msgstr "获取访问码失败！"
+msgstr "無法取得驗證碼"
 
 #: ../dra_server/views/ConfirmWindow.qml:81
 msgid "Are you sure to close remote desktop connection?"
-msgstr "您确定要断开远程桌面连接吗？"
+msgstr "你確定要關閉遠端桌面連線？"
 
 #: ../dra_server/views/ConfirmWindow.qml:94
 msgid "Cancel"
@@ -61,8 +61,8 @@ msgstr "取消"
 
 #: ../dra_server/views/ConfirmWindow.qml:107
 msgid "Confirm"
-msgstr "确定"
+msgstr "確定"
 
 #: ../dra_server/views/DisconnectWindow.qml:141
 msgid "Disconnect"
-msgstr "断开"
+msgstr "斷線"
